# ainia-task

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py  verify_phase1.py
data/: activities.json  history.json  profiles.json
data/snapshots/: child_001.json  child_002.json  child_003.json  child_004.json  child_005.json
pages/: Privacy.py
scripts/: export_demo_bundle.py  seed_history.py
src/ai_buddy/: __init__.py  buddy.py  data_models.py  evaluate.py  loader.py  persist.py  policy.py  recommender.py  report.py  session.py  simulate.py  utils.py
tests/: __init__.py  test_buddy.py  test_data_models.py  test_evaluate.py  test_loader.py  test_loader_functions.py  test_persist.py  test_policy.py  test_recommender.py  test_report.py  test_session.py  test_simulate.py
