[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-buddy"
version = "0.1.0"
description = "AI Buddy - A minimal Python project for AI-related tasks"
authors = [
    {name = "AI Buddy Team", email = "team@ai-buddy.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_buddy"]
